fix spacing

--- a/style.css
+++ b/style.css
@@ -81,3 +81,7 @@ a {
 .navbar-nav li a:hover {
     color: #2e72a1 !important;
 }
+
+.img {
+    padding: 20px;
+}
